# django-xss-fuzzer

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  django.yml
django_xss_fuzzer/: __init__.py
src/django_xss_fuzzer/: __init__.py  pytest_plugin.py
tests/integration/: conftest.py  test_basic.py
tests/integration/sample_app/sample/: asgi.py  settings.py  urls.py  wsgi.py
tests/integration/sample_app/templates/: basic_context.html  home.html
tests/integration/sample_app/test1/: apps.py  urls.py
tests/integration/sample_app/test1/views/: home.py
